# try_FastAPI_github

./: pyproject.toml
.github/workflows/: test.yaml
